--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "collect.js": "^4.28.4",
     "history": "^5.0.0",
+    "json-keys-sort": "^2.0.0",
     "react": "^16.14.0",
     "react-d3-cloud": "^0.7.0",
     "react-dom": "^16.14.0",
